Finished to refactor the code and to share it between the Quarkus Client and Main application
Signed-off-by: cmoulliard <cmoulliard@redhat.com>